--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,13 +19,13 @@ jobs:
 
       - trivy-orb/scan:
           args: --exit-code 1 --severity MEDIUM,HIGH,CRITICAL image juicebox
-            if [ $? -eq 1 ]; then
-               echo "Vulnerabilities found. Blocking deployment."
-               exit 1
-            else
-               echo "No vulnerabilities found. Proceeding with deployment."
+            #if [ $? -eq 1 ]; then
+             #  echo "Vulnerabilities found. Blocking deployment."
+              # exit 1
+            #else
+             #  echo "No vulnerabilities found. Proceeding with deployment."
                #Deploy your Docker image here
-            fi
+            #fi
       - run: 
          name: Log into docker and publish file
          command: | 
