--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           docker_layer_caching: true
 
       - trivy-orb/scan:
-          args: --exit-code 1 --severity MEDIUM,HIGH,CRITICAL image juicebox
+          args: --exit-code 1  image juicebox
     
       - run: 
          name: check if commanf failed or passed 
